<resources>
    <string name="app_name">GamesHub</string>
    <string name="game_image">Game Image</string>
    <string name="increment_button">Increment</string>
    <string name="reset_button">Restart</string>
    <string name="saludar">HI</string>

    <string name="error_loading_games">Error loading games</string>
    <string name="retry">Retry</string>
    <string name="filters">Filters</string>
    <string name="orderby">Order by:</string>

    <string name="loading">Loading...</string>
    <string name="no_games_found">Games not found</string>
    <string name="rating">Rating: %s</string>
    <string name="released">Released: %s</string>
    <string name="platforms">Platforms</string>
    <string name="genres">Genres</string>

    <string name="platformsGame">Platforms: %s</string>
    <string name="genresGame">Genres: %s</string>

    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="game_name">Game Name</string>
    <string name="rating_default">Rating: 0.0</string>
    <string name="release_default">Released:</string>
    <string name="genres_default">Genres:</string>
    <string name="platforms_default">Platforms:</string>
    <string name="stores_default">Available at:</string>
    <string name="description_default">Description not available</string>
    <string name="filter_name">Filter Name</string>
    <string name="platforms_example">Platforms: PC, PS5</string>
    <string name="error_loading_filters">Error loading filters</string>
    <string name="loading_games">Loading Games...</string>
    <string name="share">Share</string>
    <string name="webSite">Web Site</string>




</resources>