<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:orientation="vertical"
    android:background="@drawable/card_background"
    android:padding="8dp">

    <ImageView
    android:id="@+id/imageGame"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:scaleType="centerCrop"
    android:src="@android:drawable/ic_menu_gallery" />

    <TextView
    android:id="@+id/textGameName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:text="@string/game_name"
    android:textSize="14sp"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:maxLines="2"
    android:ellipsize="end" />

    <TextView
    android:id="@+id/textGameRating"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:textColor="@color/black"
    android:text="@string/rating_default"
    android:textSize="12sp"
        />

    <TextView
    android:id="@+id/textPlatforms"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:text="@string/platforms_example"
    android:textColor="@color/black"
    android:textSize="10sp"
    android:maxLines="2"
    android:ellipsize="end"
        />

        </LinearLayout>